--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="conexion pelvica, pacientes, formacion, servicios, contacto">
-  <meta name="description" content="Este es un espacio para la reabilitacion y el ejercicio de piso pelvico, pre parto y post parto.">
+  <meta name="description"
+    content="Este es un espacio para la reabilitacion y el ejercicio de piso pelvico, pre parto y post parto.">
   <title>Conexión Pélvica</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -16,12 +17,13 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./scss/main.css">
 </head>
-      <!-- header -->
+<!-- header -->
+
 <body>
-    <nav class="navbar bg-warning fixed-top navbar-expand-md">
+  <nav class="navbar bg-warning fixed-top navbar-expand-md">
     <div class="container-fluid">
-      <a class="navbar-brand" data-aos="flip-left" href="./index.html"><img class="img" src="./img/CONEXION PELVICA BRAND LOGO PRINCIPAL.png"
-          alt="logo"></a>
+      <a class="navbar-brand" data-aos="flip-left" href="./index.html"><img class="img"
+          src="./img/CONEXION PELVICA BRAND LOGO PRINCIPAL.png" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -59,62 +61,86 @@
     </div>
   </nav>
   <!-- main -->
-  <div class="card mb-3 bg-warning" data-aos="fade-up" data-aos-duration="2000" >
+  <div class="card mb-3 bg-warning" data-aos="fade-up" data-aos-duration="2000">
     <img src="./img/CONEXION PELVICA BRAND LOGO SOBRE FONDO.png" class="card-img-top" alt="...">
   </div>
   <div class="card-body">
-    <h5 class="card-title" style="text-align: center;" >SOBRE CONEXION PÉLVICA</h5>
-    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-      This content is a little bit longer.</p>
+    <h5 class="card-title" style="text-align: center;">SOBRE CONEXION PÉLVICA</h5>
+    <p class="card-text">Este nombre lo pensé porque conecta y agrupa.
+
+      La idea de conectar me gustó porque no solo es pelvis, sino que es todo el cuerpo el que habla, en el que yo
+      trabajo y hago hincapié.
+
+      Conexión con esas emociones .
+
+      Conexión de los diagramas..
+
+      Conexión con la respiración.
+
+      Con el ciclo menstrual
+
+      Con el embarazo, con el postparto, con la Pre y post menospausia, y
+      Sexualidad.</p>
     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
   </div>
   </div>
   </div>
-
-  
 <div class="card-group">
-      <div class="card" data-aos="fade-right" >
-        <img src="./img/IMG_4241.JPG" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">SOBRE MÍ</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-            content.
-            This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-      </div>
-      <div class="card" data-aos="flip-up">
-        <img src="./img/IMG_4242.JPG" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">MIS EXPRERIENCIAS</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-      </div>
-      <div class="card" data-aos="fade-left" >
-        <img src="./img/IMG_4244.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">MIS FORMACIONES</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-            content.
-            This card has even longer content than the first to show that equal height action.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
+    <div class="card" data-aos="fade-right">
+      <img src="./img/IMG_4241.JPG" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">SOBRE MÍ</h5>
+        <p class="card-text">Soy Sole una santiagueña que vive en sierras chicas en córdoba.
+          A los 17 años elegí venir a estudiar kinesiologia en Córdoba, difícil decisión para mi, difícil momento para
+          mi familia dejarme volar sola en una ciudad diferente...
+          Emprendí el camino... con el claro objetivo de recibirme, de abocarme a esta profesión porque quería ayudar a
+          las personas m y lo logre...
+          comencé a especializarme, a tener mis primeros trabajos y fue sin dudas un gran desafío..
+          Conocí a muchas hermosas causalidades, como me gusta llamarlos a ellos, mis pacientes, a quienes con mucho
+          cariño les brindo lo mejor de mi.
+          Conocí muchas historias, sus momentos felices, algunos no tanto, pude escucharlos y aprender con cada uno de
+          ellos...
+          Y en el camino también Conocí a muchos amigos, compañeros de la facu con quienes compartí momentos
+          inolvidables, y también volvía a mis pagos para disfrutarlos de cerca a mis familiares y amigos.
+          Conocí una persona muy especial, que es mi compañero de vida, mi marido, con quien formamos una familia muy
+          especial. Con 2 hijos perrunos y un gato, a quienes les damos mucho amor y nos divertimos mucho.</p>
+        <p class="card-text"><small class="text-muted"></small></p>
       </div>
     </div>
-      <!-- footer -->
-
+    <div class="card" data-aos="flip-up">
+      <img src="./img/IMG_4242.JPG" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">MIS EXPRERIENCIAS</h5>
+        <p class="card-text">● Instituto Privado de Rehabilitación Integral “Casali”. Área de
+          Traumatología. <br>Centro Médico Privado “Pierre de Coubertin”. Área de Traumatología y
+          Neurología <br>O.S.E.C.A.C. Área de Traumatología, Respiratorio y Neurología <br> Sanatorio Allende.
+          Rehabilitación y Terapia Física <br>“EspacioFísico” Rehabilitación y Terapia Física Miembro Superior <br>S.R.I
+          “SERVICIO DE REHABILITACION INTEGRAL
+          Servicio de Rehabilitación y Terapia Física “Lic. Adolfo Mazzuchi” <br> Centro de Rehabilitación Integral
+          “INSERIR”. Rehabilitación Neurológica de
+          niños y adultos <br>Clases de Gimnasia Abdominal Hipopresiva. <br> </p>
+        <p class="card-text"><small class="text-muted"></small></p>
+      </div>
+    </div>
+    <div class="card" data-aos="fade-left">
+      <img src="./img/IMG_4244.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">MIS FORMACIONES</h5>
+        <p class="card-text">Lic en Kinesiologia y Fisioterapia <br> - Posgrado en Rehabilitación de Piso Pelvico <br> -
+          Master Experta en Método Hipopresivo Caufriez Concept <br> - Profesora para Latam de Caufriez Concept <br> -
+          Fisioterapeuta en Obstetricia <br> - Periparto <br> - Rehabilitación Abdominal</p>
+        <p class="card-text"><small class="text-muted"></small></p>
+      </div>
+    </div>
+  </div>
   
-  <br>
-
   <footer>
     <div class="container-fluid">
       <div class="row justify-content-md-center">
-
-        <div class="col-2">
+<div class="col-2">
           <a href="https://api.whatsapp.com/send?phone=3516342010&text=Hola" target="_blank">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-              class="bi bi-whatsapp" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-whatsapp"
+              viewBox="0 0 16 16">
               <path
                 d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
             </svg></a>
@@ -127,15 +153,13 @@
                 d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
             </svg></a>
         </div>
-
-        <div class="col-2"><a href="https://www.facebook.com/sole.pellene" target="_blank">
+<div class="col-2"><a href="https://www.facebook.com/sole.pellene" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-facebook"
               viewBox="0 0 16 16">
               <path
                 d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
             </svg></a></div>
-
-        <div class="col-1"><a href="https://goo.gl/maps/TKhkm3Qm78yUMXhA7" target="_blank">
+<div class="col-1"><a href="https://goo.gl/maps/TKhkm3Qm78yUMXhA7" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-geo-alt"
               viewBox="0 0 16 16">
               <path
@@ -151,13 +175,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
     </script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-			AOS.init({
-				easing: 'ease-out-back',
-				duration: 2000
-			});
-		</script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      easing: 'ease-out-back',
+      duration: 2000
+    });
+  </script>
 </body>
 
 </html>
